...
                        <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ecm-75-JOc">
                                <rect key="frame" x="408" y="328" width="208" height="112"/>
                                <fontDescription key="fontDescription" name="VenusRising-Regular" family="Venus Rising" pointSize="24"/>
                                <state key="normal" title="START" backgroundImage="Button">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
                                <state key="disabled" title="START"/>
                                <state key="selected" title="START"/>
                                <state key="highlighted" title="START" backgroundImage="Button Highlighted">
                                    <color key="titleColor" red="0.22352941176470587" green="0.79607843137254897" blue="0.84313725490196079" alpha="1" colorSpace="calibratedRGB"/>
...
                                                        <state key="selected" image="Rover Icon Selected"/>
                                                        <state key="highlighted" image="Rover Icon Selected"/>
                                                        <connections>
                                                            <action selector="roverButtonTapped:" destination="JIk-9B-Nkc" eventType="touchUpInside" id="2Hq-Je-ivM"/>
                                                        </connections>
                                                    </button>
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Curiosity" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zMv-2P-PEG">
                                                        <rect key="frame" x="24.5" y="94" width="103" height="14.5"/>
                                                        <fontDescription key="fontDescription" name="VenusRising-Regular" family="Venus Rising" pointSize="12"/>
                                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                        <nil key="highlightedColor"/>
                                                    </label>
                                                </subviews>
...
                                                        <state key="selected" image="Rover Icon Selected"/>
                                                        <state key="highlighted" image="Rover Icon Selected"/>
                                                        <connections>
                                                            <action selector="roverButtonTapped:" destination="JIk-9B-Nkc" eventType="touchUpInside" id="Vlg-H3-XhU"/>
                                                        </connections>
                                                    </button>
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Opportunity" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F2X-cE-qD5">
                                                        <rect key="frame" x="14" y="94" width="124.5" height="14.5"/>
                                                        <fontDescription key="fontDescription" name="VenusRising-Regular" family="Venus Rising" pointSize="12"/>
                                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                        <nil key="highlightedColor"/>
                                                    </label>
                                                </subviews>
...
                                                        <state key="selected" image="Rover Icon Selected"/>
                                                        <state key="highlighted" image="Rover Icon Selected"/>
                                                        <connections>
                                                            <action selector="roverButtonTapped:" destination="JIk-9B-Nkc" eventType="touchUpInside" id="0d7-Qd-Z4K"/>
                                                        </connections>
                                                    </button>
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Spirit" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hs2-NX-0Il">
                                                        <rect key="frame" x="24.5" y="94" width="103" height="14.5"/>
                                                        <fontDescription key="fontDescription" name="VenusRising-Regular" family="Venus Rising" pointSize="12"/>
                                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                        <nil key="highlightedColor"/>
                                                    </label>
                                                </subviews>
...
